# SharpClaw.ModuleSDK

./: .gitignore  Directory.Build.props  LICENSE.md  README.md  SharpClaw.ModuleSDK.slnx
.github/: CONTRIBUTING.md  pull_request_template.md
SharpClaw.ModuleHost.InProcess/: ModuleLoadContext.cs  SharpClaw.ModuleHost.InProcess.csproj
SharpClaw.ModuleHost.OutOfProcess/: OutOfProcessCliIdResolver.cs  OutOfProcessHostCapabilityProxies.cs  OutOfProcessJsonOptions.cs  OutOfProcessModuleAssemblyLoader.cs  OutOfProcessPathGuard.cs  Program.cs  README.md  SharpClaw.ModuleHost.OutOfProcess.csproj
SharpClaw.ModuleHost.OutOfProcess.Tests/: LifecycleSmokeModule.cs  OutOfProcessLifecycleTests.cs  OutOfProcessModuleAssemblyLoaderTests.cs  SharpClaw.ModuleHost.OutOfProcess.Tests.csproj
SharpClaw.ModuleHost.OutOfProcess/Properties/: AssemblyInfo.cs
SharpClaw.Modules.DotNetSidecarHost/: DotNetSidecarHostCapabilityProxies.cs  DotNetSidecarJsonOptions.cs  DotNetSidecarModuleAssemblyLoader.cs  DotNetSidecarPathGuard.cs  Program.cs  README.md  SharpClaw.Modules.DotNetSidecarHost.csproj  SidecarCliIdResolver.cs
SharpClaw.Modules.DotNetSidecarHost.Tests/: DotNetSidecarModuleAssemblyLoaderTests.cs  SharpClaw.Modules.DotNetSidecarHost.Tests.csproj
SharpClaw.Modules.DotNetSidecarHost/Properties/: AssemblyInfo.cs
SharpClaw.Modules.Hosting/: ModuleLoadContext.cs  SharpClaw.Modules.Hosting.csproj
sdk/python/sharpclaw-module-host/: README.md  pyproject.toml
sdk/python/sharpclaw-module-host/src/sharpclaw_module_host/: __init__.py  host.py
(+3 files in other folders)
