[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sharpclaw-module-host"
version = "0.1.0b0"
description = "Python helper for SharpClaw modules hosted out of process."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"

[project.urls]
Homepage = "https://github.com/mkn8rn/SharpClaw.ModuleSDK"
Repository = "https://github.com/mkn8rn/SharpClaw.ModuleSDK"
Issues = "https://github.com/mkn8rn/SharpClaw.ModuleSDK/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sharpclaw_module_host"]
